--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="fav__container">
             <div class="fav__box">
-                <img src="caption 1.jpg." alt="Photo">
+                <img src="caption 1.jpg" alt="Photo">
 
                 <h2>By Ashlyn S</h2>
                 <h2> 3 family-friendly days in Rome</h2>
